# terraform-google-oteldemostack

./: README.md  catalog-info.yaml  main.tf  provider.tf  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: infracost.yaml  reuse-license-check.yaml  terraform.yaml  tfsec.yaml
.reuse/: dep5
